<resources>
    <string name="app_name">FoodWatcher</string>
    <string name="Open">FoodWatcher</string>
    <string name="Close">FoodWatcher</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="bouton_annuler">Annuler</string>
    <string name="bouton_ajouter">Ajouter</string>
    <string name="hint_code_barre">Code-barres</string>
    <string name="hint_intitule_maison">Intitulé du stock</string>
    <string name="hint_quantite">Quantité</string>
    <string name="hint_intitule_produit">Intitulé du produit</string>
    <string name="bouton_ajouter_maison">Ajouter</string>
    <string name="text_btn_picture">Prendre une photo</string>
    <string name="drawer_menu_item_carte_magasin">Où faire mes courses ?</string>
    <string name="drawer_menu_item_liste_course">Ma liste de courses</string>
    <string name="drawer_menu_parametre">Paramètres</string>
    <string name="drawer_menu_item_ajouter_stock">Ajouter un stock</string>
    <string name="drawer_menu_titre_rubrique_stock">Mes Stocks</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="activite_stock_barre_outil_item_exporter">Exporter le stock</string>
    <string name="activite_stock_barre_outil_item_supprimer">Supprimer le stock</string>

</resources>
