<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.ActiviteAjouterProduit">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_column="0"
        android:layout_row="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_intitule_produit"
            app:boxStrokeColor="@color/colorButton"
            app:hintTextColor="@color/colorButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/intitule_produit_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_code_barre"
            app:boxStrokeColor="@color/colorButton"
            app:hintTextColor="@color/colorButton">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_barre_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_jours_conservation"
            app:boxStrokeColor="@color/colorButton"
            app:hintTextColor="@color/colorButton">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jours_conservation_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantite_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:boxStrokeColor="@color/colorButton"
            app:hintTextColor="@color/colorButton"
            android:hint="@string/hint_quantite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Spinner
                android:id="@+id/choix_unite_quantite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Spinner
                android:id="@+id/choix_categorie_produit"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <Spinner
                android:id="@+id/choix_emplacement"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_add_product_action_add"
                app:backgroundTint="@color/colorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/bouton_ajouter" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_view_add_product_action_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@+id/btn_view_add_product_action_add"
                android:layout_toLeftOf="@+id/btn_view_add_product_action_add"
                android:text="@string/bouton_annuler" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_column="0"
        android:layout_row="1">
        <ImageView
            android:id="@+id/view_add_product_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="Image" />
    </LinearLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>